# pkg/matreshka_be_api/matreshka-be_api.pb.gw.go
@@ -237,9 +237,9 @@ func local_request_MatreshkaBeAPI_PatchConfig_0(ctx context.Context, marshaler r
 	return msg, metadata, err
 }
 
-func request_MatreshkaBeAPI_UpdateConfig_0(ctx context.Context, marshaler runtime.Marshaler, client MatreshkaBeAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_MatreshkaBeAPI_StoreConfig_0(ctx context.Context, marshaler runtime.Marshaler, client MatreshkaBeAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
-		protoReq UpdateConfig_Request
+		protoReq StoreConfig_Request
 		metadata runtime.ServerMetadata
 		err      error
 	)
@@ -254,13 +254,13 @@ func request_MatreshkaBeAPI_UpdateConfig_0(ctx context.Context, marshaler runtim
 	if err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "config_name", err)
 	}
-	msg, err := client.UpdateConfig(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.StoreConfig(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 }
 
-func local_request_MatreshkaBeAPI_UpdateConfig_0(ctx context.Context, marshaler runtime.Marshaler, server MatreshkaBeAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_MatreshkaBeAPI_StoreConfig_0(ctx context.Context, marshaler runtime.Marshaler, server MatreshkaBeAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
-		protoReq UpdateConfig_Request
+		protoReq StoreConfig_Request
 		metadata runtime.ServerMetadata
 		err      error
 	)
@@ -275,7 +275,7 @@ func local_request_MatreshkaBeAPI_UpdateConfig_0(ctx context.Context, marshaler 
 	if err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "config_name", err)
 	}
-	msg, err := server.UpdateConfig(ctx, &protoReq)
+	msg, err := server.StoreConfig(ctx, &protoReq)
 	return msg, metadata, err
 }
 
@@ -458,25 +458,25 @@ func RegisterMatreshkaBeAPIHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 		forward_MatreshkaBeAPI_PatchConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
-	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_UpdateConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_StoreConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/matreshka_be_api.MatreshkaBeAPI/UpdateConfig", runtime.WithHTTPPathPattern("/api/config/{config_name}/update"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/matreshka_be_api.MatreshkaBeAPI/StoreConfig", runtime.WithHTTPPathPattern("/api/config/{config_name}/store"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_MatreshkaBeAPI_UpdateConfig_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_MatreshkaBeAPI_StoreConfig_0(annotatedContext, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		forward_MatreshkaBeAPI_UpdateConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_MatreshkaBeAPI_StoreConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_RenameConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
@@ -640,22 +640,22 @@ func RegisterMatreshkaBeAPIHandlerClient(ctx context.Context, mux *runtime.Serve
 		}
 		forward_MatreshkaBeAPI_PatchConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
-	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_UpdateConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_StoreConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/matreshka_be_api.MatreshkaBeAPI/UpdateConfig", runtime.WithHTTPPathPattern("/api/config/{config_name}/update"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/matreshka_be_api.MatreshkaBeAPI/StoreConfig", runtime.WithHTTPPathPattern("/api/config/{config_name}/store"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_MatreshkaBeAPI_UpdateConfig_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_MatreshkaBeAPI_StoreConfig_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		forward_MatreshkaBeAPI_UpdateConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_MatreshkaBeAPI_StoreConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 	mux.Handle(http.MethodPost, pattern_MatreshkaBeAPI_RenameConfig_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
@@ -684,7 +684,7 @@ var (
 	pattern_MatreshkaBeAPI_ListConfigs_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "config", "list"}, ""))
 	pattern_MatreshkaBeAPI_CreateConfig_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "config", "config_name", "new"}, ""))
 	pattern_MatreshkaBeAPI_PatchConfig_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "config", "config_name", "patch"}, ""))
-	pattern_MatreshkaBeAPI_UpdateConfig_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "config", "config_name", "update"}, ""))
+	pattern_MatreshkaBeAPI_StoreConfig_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "config", "config_name", "store"}, ""))
 	pattern_MatreshkaBeAPI_RenameConfig_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "config", "config_name", "rename", "new_name"}, ""))
 )
 
@@ -695,6 +695,6 @@ var (
 	forward_MatreshkaBeAPI_ListConfigs_0    = runtime.ForwardResponseMessage
 	forward_MatreshkaBeAPI_CreateConfig_0   = runtime.ForwardResponseMessage
 	forward_MatreshkaBeAPI_PatchConfig_0    = runtime.ForwardResponseMessage
-	forward_MatreshkaBeAPI_UpdateConfig_0   = runtime.ForwardResponseMessage
+	forward_MatreshkaBeAPI_StoreConfig_0    = runtime.ForwardResponseMessage
 	forward_MatreshkaBeAPI_RenameConfig_0   = runtime.ForwardResponseMessage
 )
